# quant_algorithms

./: .gitignore  README.md  ToDo.md  test.py
backtester/: backtester.py  pyproject.toml
backtester/backtesting_engine/: __init__.py  core.py  data_handler.py  events.py  execution.py  performance.py  portfolio.py  strategy.py
backtester/backtesting_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cnn_forecasting/: README.md
cnn_forecasting/experiments/: README.md  attempt.py
