# File: pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backtesting_engine"
version = "0.1.0"
description = "A personal library for backtesting trading strategies"
dependencies = [
    "pandas",  # We list pandas here because our code relies on it
]